<resources>
    <string name="app_name">QuizIt</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name_hint">Name</string>
    <string name="start_btn">Start</string>
    <string name="welcome_illustration">Welcome Illustration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="result">RESULT</string>
    <string name="trophy">Trophy</string>
    <string name="hey_congrats">Hey, Congrats!</string>
    <string name="finish">FINISH</string>
    <string name="question_1">Question 1</string>
    <string name="logo">Logo</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="submit">SUBMIT</string>
    <string name="theme_mode_button">Theme Mode Button</string>
</resources>