<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".QuizQuestionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            style="@style/question"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="36dp" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/gradle"
            app:layout_constraintTop_toBottomOf="@+id/tv_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="36dp" />

        <LinearLayout
            android:id="@+id/ll_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="36dp"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="0dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="0"
                android:max="5"
                android:indeterminate="false"
                android:minHeight="50dp" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/progress"
                tools:text="0/10"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_answer_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_1"
            style="@style/option"
            app:layout_constraintTop_toBottomOf="@+id/ll_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="36dp"
            android:layout_marginHorizontal="64dp" />

        <TextView
            android:id="@+id/tv_answer_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_2"
            style="@style/option"
            app:layout_constraintTop_toBottomOf="@+id/tv_answer_1"
            app:layout_constraintStart_toStartOf="@+id/tv_answer_1"
            app:layout_constraintEnd_toEndOf="@+id/tv_answer_1" />

        <TextView
            android:id="@+id/tv_answer_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_3"
            style="@style/option"
            android:background="@drawable/default_option_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_answer_2"
            app:layout_constraintStart_toStartOf="@+id/tv_answer_2"
            app:layout_constraintEnd_toEndOf="@+id/tv_answer_2" />

        <TextView
            android:id="@+id/tv_answer_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_4"
            style="@style/option"
            android:background="@drawable/default_option_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_answer_3"
            app:layout_constraintStart_toStartOf="@+id/tv_answer_3"
            app:layout_constraintEnd_toEndOf="@+id/tv_answer_3" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/button"
            app:layout_constraintTop_toBottomOf="@+id/tv_answer_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>