<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="48sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="64dp" />

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="64dp"
            android:contentDescription="@string/trophy"
            android:src="@drawable/trophy"
            app:layout_constraintTop_toBottomOf="@+id/tv_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey_congrats"
            android:textColor="@color/primary"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_trophy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="36dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Username"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_congratulations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="54dp"  />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Your Score is 9 out of 10"
            android:textSize="24sp"
            android:textColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="48dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>