<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/my_quiz_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_quiz_app"
            android:textSize="48sp"
            android:textColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="36dp" />

        <ImageView
            android:id="@+id/iv_welcome_illustration"
            android:layout_width="334dp"
            android:layout_height="334dp"
            android:contentDescription="Welcome Illustration"
            android:src="@drawable/welcome_illustration"
            app:layout_constraintTop_toBottomOf="@+id/my_quiz_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="36dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28dp"
            android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_welcome_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#353A43" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:text="@string/please_enter_your_name"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="#7A8089"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:textColorHint="#7A8089"
                        android:inputType="textCapWords"
                        android:textColor="#363A43"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="56dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/start_btn"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>